--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
    <H1>Home 1HTML\CSS</H1>
-   <a href="HomeWork/">Diary</a><br>
-   <a href="HomeWork/">Vizbor</a><br>
-   <a href="HomeWork/">Dop</a>
+   <a href="Home\Diary\index.html">Diary</a><br>
+   <a href="Home\Vizbor\vizbor.html">Vizbor</a><br>
+   <a href="Home\Dop\index.html">Dop</a>
 
 
 </body>
