--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
    <a href="home\Vizbor\vizbor.html">Vizbor</a><br>
    <a href="home\Dop\index.html">Dop</a>
 
+   <h1>2 Изображения/CSS</h1>
+   <a href="home/Childbook/index.html">childbook</a>
+
 </body>
 </html>
