--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
    <a href="home\Dop\index.html">Dop</a>
 
    <h1>2 Изображения/CSS</h1>
-   <a href="home/Childbook/index.html">childbook</a>
+   <a href="home/Childbook/index.html">childbook</a><br>
+   <a href="home/2.1+/index.html">Сравнение Webp</a><br>
+   <a href="home/Skobki/index.html">Skobki</a>
 
 </body>
 </html>
