--- a/home/FONT_gvh/index2.html
+++ b/home/FONT_gvh/index2.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="Fonts/style.css">
+   <link rel="stylesheet" href="Font/stylesheet.css">
    <title>Fonts 2</title>
 </head>
 <body>
    
    <h1 align="center">2 способ</h1>
-   <p style="font-family: 'Marck Script', cursive;">- Скучная у меня жизнь. Я охочусь за курами, а люди охотятся за мною. Все куры одинаковы, и люди все одинаковы. И живется мне скучновато. Но если ты меня приручишь, моя жизнь словно солнцем озарится. Твои шаги я стану различать среди тысяч других. Заслышав людские шаги, я всегда убегаю и прячусь. Но твоя походка позовет меня, точно музыка, и я выйду из своего убежища. И потом - смотри! Видишь, вон там, в полях, зреет пшеница? Я не ем хлеба. Колосья мне не нужны. Пшеничные поля ни о чем мне не говорят. И это грустно! Но у тебя золотые волосы. И как чудесно будет, когда ты меня приручишь! Золотая пшеница станет напоминать мне тебя. И я полюблю шелест колосьев на ветру...</p>
+   <p style="font-family: 'Lobster';">- Скучная у меня жизнь. Я охочусь за курами, а люди охотятся за мною. Все куры одинаковы, и люди все одинаковы. И живется мне скучновато. Но если ты меня приручишь, моя жизнь словно солнцем озарится. Твои шаги я стану различать среди тысяч других. Заслышав людские шаги, я всегда убегаю и прячусь. Но твоя походка позовет меня, точно музыка, и я выйду из своего убежища. И потом - смотри! Видишь, вон там, в полях, зреет пшеница? Я не ем хлеба. Колосья мне не нужны. Пшеничные поля ни о чем мне не говорят. И это грустно! Но у тебя золотые волосы. И как чудесно будет, когда ты меня приручишь! Золотая пшеница станет напоминать мне тебя. И я полюблю шелест колосьев на ветру...</p>
   
 
 </body>
