--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 
    <H1>Home 1HTML\CSS</H1>
 
-      <a href="home\diary\index.html">diary</a><br>
-      <a href="home\Vizbor\vizbor.html">Vizbor</a><br>
-      <a href="home\Dop\index.html">Dop</a>
+      <a href="home\diary\index.html">diary - checked</a><br>
+      <a href="home\Vizbor\vizbor.html">Vizbor - checked</a><br>
+      <a href="home\Dop\index.html">1.1+oldtag - checked</a>
 
    <h1>2 Изображения/CSS</h1>
 
-      <a href="home/Childbook/index.html">childbook</a><br>
-      <a href="home/2.1+/index.html">Сравнение Webp</a><br>
-      <a href="home/Skobki/index.html">Skobki</a>
+      <a href="home/Childbook/index.html">book - checked</a><br>
+      <a href="home/2.1+/index.html">WebP - checked</a><br>
+      <a href="home/Skobki/index.html">Skob - checked</a>
 
    <h1>3 Цвет,шрифт,границы,размер</h1>
 
-      <a href="home/FONT_gvh/index.html">Font_gwh-1 способ</a><br>
-      <a href="home/FONT_gvh/index2.html">Font_gwh-2 способ</a><br>
-      <a href="home/3dop/index.html">Дополнительное 3.1+ 3.2+</a>
+      <a href="home/FONT_gvh/index.html">Fonts 1 - checked</a><br>
+      <a href="home/FONT_gvh/index2.html">Fonts 2</a><br>
+      <a href="home/3dop/index.html">safe - checked</a>
 
 </body>
 </html>
