--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
       <a href="home/FONT_gvh/index2.html">Fonts 2</a><br>
       <a href="home/3dop/index.html">safe - checked</a>
 
+      <h1>4 Отступы,фон,таблицы</h1>
+
+      <a href="home/Div_frame/index.html">frame</a><br>
+      <a href="home/1tag/index.html">1 tag</a><br>
+      <a href="home/area/index.html">area</a><br>
+      <a href="home/Nocut/index.html">nocut</a><br>
+      <a href="home/cards/index.html">cards</a>
 </body>
 </html>
