--- a/home/Nocut/index2.html
+++ b/home/Nocut/index2.html
@@ -6,11 +6,14 @@
 </head>
 <body>
 
-   <div style="background: url(img/ramka.png) no-repeat center;
-               height: 450px;
+   <div style="border: 200px dashed transparent ;
+               padding: 15px;
+               border-image: url(img/ramka.png);
+               border-image-slice: 100; 
                text-align: center;
-               padding-top: 250px;">
-      Бериллий — элемент главной подгруппы <br>
+               font-size: 30px;
+               ">
+   Бериллий — элемент главной подгруппы <br>
       второй группы, второго периода <br>
       периодической системы химических <br>
       элементов Д. И. Менделеева, с атомным <br>
@@ -18,8 +21,9 @@
       (лат. Beryllium). Высокотоксичный <br>
       элемент. Простое вещество бериллий — <br>
       относительно твёрдый металл светло-<br>
-      серого цвета.
+      серого цвета.   
    </div>
+   
    
 </body>
 </html>
