--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
    <meta charset="UTF-8">
    <title>Document</title>
 </head>
+<style>
+   a{
+      text-decoration: none;
+      color: rgba(136, 0, 255, 0.575);
+      font-size: 30px;
+   }
+   a:hover{
+      color: red;
+   }
+   span{
+      color: red;
+   }
+</style>
 <body>
 
    <H1>Home 1HTML\CSS</H1>
 
-      <a href="home\diary\index.html">diary - checked</a><br>
-      <a href="home\Vizbor\vizbor.html">Vizbor - checked</a><br>
-      <a href="home\Dop\index.html">1.1+oldtag - checked</a>
+      <a href="home\diary\index.html">diary - <span>checked</span></a><br>
+      <a href="home\Vizbor\vizbor.html">Vizbor - <span>checked</span></a><br>
+      <a href="home\Dop\index.html">1.1+oldtag - <span>checked</span></a>
 
    <h1>2 Изображения/CSS</h1>
 
-      <a href="home/Childbook/index.html">book - checked</a><br>
-      <a href="home/2.1+/index.html">WebP - checked</a><br>
-      <a href="home/Skobki/index.html">Skob - checked</a>
+      <a href="home/Childbook/index.html">book - <span>checked</span></a><br>
+      <a href="home/2.1+/index.html">WebP - <span>checked</span></a><br>
+      <a href="home/Skobki/index.html">Skob - <span>checked</span></a>
 
    <h1>3 Цвет,шрифт,границы,размер</h1>
 
-      <a href="home/FONT_gvh/index.html">Fonts 1 - checked</a><br>
+      <a href="home/FONT_gvh/index.html">Fonts 1 - <span>checked</span></a><br>
       <a href="home/FONT_gvh/index2.html">Fonts 2</a><br>
-      <a href="home/3dop/index.html">safe - checked</a>
+      <a href="home/3dop/index.html">safe - <span>checked</span></a>
 
    <h1>4 Отступы,фон,таблицы</h1>
 
@@ -37,6 +50,15 @@
 
       <a href="home/maket_table/index.html">tabl</a><br>
       <a href="home/maket_div/index.html">Div</a><br>
+
+   <h1>6 Иерархические селекторы. Каскадирование</h1>
+
+      <a href="home/links/index.html">links</a><br>
+      <a href="home/CSS_CHESS/index.html">chess</a><br>
+      <a href="home/CHESS/index.html">Chlbg</a><br>
+      <a href="home/CHESS/index2.html">ChL:b</a><br>
+      <a href="home/stars/index.html">stars</a><br>
+      
       
 </body>
 </html>
