--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
       <a href="home/maket_table/index.html">tabl</a><br>
       <a href="home/maket_div/index.html">Div</a><br>
+      <a href="home/ball12/index.html">Ball12</a><br>
 
    <h1>6 Иерархические селекторы. Каскадирование</h1>
 
