--- a/home/MAKET/index.html
+++ b/home/MAKET/index.html
@@ -62,6 +62,243 @@
       </div>
    </div>
    <p class="sell">Хиты продаж</p>
+   <div class="container_item">
+      <ul class="list_item">
+         <li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li>
+         <li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li>
+         <li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li>
+         <li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li>
+         <li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li><li>
+            <div class="div_item">
+               <img src="img_item/список желаемого.png" alt="" class="heart">
+            </div>
+            <img src="img_item/image 2.png" alt="" class="item" >
+            <h4 class="item_name">Валенсия Beige</h4>
+            <h6 class="item_name_small">Барные стулья</h6>
+            <p class="price">2 300 P</p>
+         </li>
+      </ul>
+
+
+
+
+   </div>
    <div class="footer">
       <div class="footer_container">
          <p class="navi">Навигация</p>
