2 pages on the float

--- a/home/MAKET/index.html
+++ b/home/MAKET/index.html
@@ -45,7 +45,7 @@
       <ul>
          <li id="kitchen"><a href="">Кухни</a></li>
          <li id="badroom"><a href="">Спальни</a></li>
-         <li id="living"><a href="">Гостинные</a></li>
+         <li id="living"><a href="item.html" target="_blank">Гостинные</a></li>
          <li id="hallway"><a href="">Прихожие</a></li>
          <li id="office"><a href="">Офисная мебель</a></li>
          <li id="children"><a href="">Детская</a></li>
