Full maket done

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       <a href="home/CHESS/index2.html">ChL:b</a><br>
       <a href="home/stars/index.html">stars</a><br>
       
-      
+   <h1>3 странички готового макета</h1>
+   <p>(ссылки на вторую страничку в меню во вкладке "гостинные",а на третью страничку во вкладке "акции")</p>
+   <a href="home/MAKET/index.html">Maket</a><br>
 </body>
 </html>
