--- a/home/MAKET/index.html
+++ b/home/MAKET/index.html
@@ -49,7 +49,7 @@
          <li id="hallway"><a href="">Прихожие</a></li>
          <li id="office"><a href="">Офисная мебель</a></li>
          <li id="children"><a href="">Детская</a></li>
-         <li id="promotion"><a href="">Акция</a></li>
+         <li id="promotion"><a href="search.html" target="_blank">Акция</a></li>
          <li ><a href=""><img src="img/etc.png" alt=""></a></li>
       </ul>
    </div>
@@ -294,11 +294,8 @@
             <p class="price">2 300 P</p>
          </li>
       </ul>
-
-
-
-
    </div>
+   
    <div class="footer">
       <div class="footer_container">
          <p class="navi">Навигация</p>
