--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
       <a href="home/CHESS/index2.html">ChL:b</a><br>
       <a href="home/stars/index.html">stars</a><br>
    
+   <h1>7 Медиазапросы.Адаптивная верстка</h1>
 
-      <h1>7 Медиазапросы.Адаптивная верстка</h1>
-      <a href="home/MAKET_ADAPT/index.html">Adapt</a><br>
-      <a href="home/pict/index.html">Pict</a><br>
+      <a href="home/MAKET_ADAPT/index.html">adapt</a><br>
+      <a href="home/pict/index.html">pict</a><br>
       <a href="home/CHESS/index.html">href</a><br>
-   
 </body>
 </html>
