--- a/home/maket_div/index.html
+++ b/home/maket_div/index.html
@@ -62,6 +62,9 @@
    <div style="text-align: center; padding: 15px; background: aqua; color: blue; font-size: 30px;">
       Главное не победа,а участие!
    </div>
-   
+   <div style="width: 150px; height: 40px; background-color: greenyellow; text-align: center; padding-top: 21px; position: fixed; right: 30px;
+   top:30px;">
+      <a href="">вступить в клуб</a>
+   </div>
 </body>
 </html>
