--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
    span{
       color: red;
    }
+   .repeat{
+      color: rgb(0, 17, 255);
+   }
 </style>
 <body>
 
@@ -34,36 +37,44 @@
    <h1>3 Цвет,шрифт,границы,размер</h1>
 
       <a href="home/FONT_gvh/index.html">Fonts 1 - <span>checked</span></a><br>
-      <a href="home/FONT_gvh/index2.html">Fonts 2</a><br>
+      <a href="home/FONT_gvh/index2.html">Fonts 2- <span class="repeat">ПЕРЕДЕЛАЛ(Были вопросы)</span></a><br>
       <a href="home/3dop/index.html">safe - <span>checked</span></a>
 
    <h1>4 Отступы,фон,таблицы</h1>
 
-      <a href="home/Div_frame/index.html">frame</a><br>
-      <a href="home/5.60/index.html">5.60</a><br>
-      <a href="home/1tag/index.html">1 tag</a><br>
-      <a href="home/area/index.html">area</a><br>
-      <a href="home/Nocut/index.html">nocut</a><br>
-      <a href="home/cards/index.html">cards</a>
+      <a href="home/Div_frame/index.html">frame - <span>checked</span></a><br>
+      <a href="home/5.60/index.html">5.60 - <span>checked</span></a><br>
+      <a href="home/1tag/index.html">1 tag - <span>checked</span></a><br>
+      <a href="home/area/index.html">area - <span>checked</span></a><br>
+      <a href="home/Nocut/index.html">nocut - <span>checked</span></a><br>
+      <a href="home/tefal/index.html">tefal- <span class="repeat">ПЕРЕДЕЛАЛ(Были вопросы)</span></a><br>
+      <a href="home/cards/index.html">cards - <span>checked</span></a>
 
    <h1>5 Обтекание. Вёрстка макетов. Селекторы	</h1>
 
-      <a href="home/maket_table/index.html">tabl</a><br>
-      <a href="home/maket_div/index.html">Div</a><br>
-      <a href="home/ball12/index.html">Ball12</a><br>
+      <a href="home/maket_table/index.html">tabl - <span>checked</span></a><br>
+      <a href="home/maket_div/index.html">Div - <span>checked</span></a><br>
+      <a href="home/ball12/index.html">Ball12 - <span>checked</span></a><br>
 
    <h1>6 Иерархические селекторы. Каскадирование</h1>
 
-      <a href="home/links/index.html">links</a><br>
-      <a href="home/CSS_CHESS/index.html">chess</a><br>
-      <a href="home/CHESS/index.html">Chlbg</a><br>
-      <a href="home/CHESS/index2.html">ChL:b</a><br>
-      <a href="home/stars/index.html">stars</a><br>
+      <a href="home/links/index.html">links - <span>checked</span></a><br>
+      <a href="home/CSS_CHESS/index.html">chess - <span>checked</span></a><br>
+      <a href="home/CHESS/index.html">Chlbg - <span>checked</span></a><br>
+      <a href="home/CHESS/index2.html">ChL:b - <span>checked</span></a><br>
+      <a href="home/stars/index.html">stars - <span>checked</span></a><br>
    
    <h1>7 Медиазапросы.Адаптивная верстка</h1>
 
-      <a href="home/MAKET_ADAPT/index.html">adapt</a><br>
-      <a href="home/pict/index.html">pict</a><br>
-      <a href="home/CHESS/index.html">href</a><br>
+      <a href="home/MAKET_ADAPT/index.html">adapt - <span>checked</span></a><br>
+      <a href="home/pict/index.html">pict - <span>checked</span></a><br>
+      <a href="home/CHESS/index.html">href - <span>checked</span></a><br>
+
+   <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
+
+      <a href="home/maket_form/index.html">form</a><br>
+      <a href="home/maket_abs/index.html">abs</a><br>
+      <a href="home/maket_div/index.html">fix</a><br>
+
 </body>
 </html>
