--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       <a href="home/pict/index.html">pict - <span>checked</span></a><br>
       <a href="home/CHESS/index.html">href - <span>checked</span></a><br>
 
+   <h1>Макет сайта</h1>
+
+      <a href="home/MAKET/index.html">САЙТ</a><br>
+      <p>Две другие страницы на ссылках "гостинные" и "акции"</p>
+
    <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
 
       <a href="home/maket_form/index.html">form</a><br>
