--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <h1>Макет сайта</h1>
 
-      <a href="home/MAKET/index.html">САЙТ</a><br>
+      <a href="home/Maket_site/index.html">САЙТ</a><br>
       <p>Две другие страницы на ссылках "гостинные" и "акции"</p>
 
    <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
