--- a/home/Maket_site/index.html
+++ b/home/Maket_site/index.html
@@ -45,11 +45,11 @@
       <ul>
          <li id="kitchen"><a href="">Кухни</a></li>
          <li id="badroom"><a href="">Спальни</a></li>
-         <li id="living"><a href="item.html" target="_blank">Гостинные</a></li>
+         <li id="living"><a href="item/item.html" target="_blank">Гостинные</a></li>
          <li id="hallway"><a href="">Прихожие</a></li>
          <li id="office"><a href="">Офисная мебель</a></li>
          <li id="children"><a href="">Детская</a></li>
-         <li id="promotion"><a href="search.html" target="_blank">Акция</a></li>
+         <li id="promotion"><a href="search/search.html" target="_blank">Акция</a></li>
          <li ><a href=""><img src="img/etc.png" alt=""></a></li>
       </ul>
    </div>
