--- a/home/maket_div/index.html
+++ b/home/maket_div/index.html
@@ -34,13 +34,9 @@
             <li>танцы</li>
             <li>песни</li>
             <li>зарядка</li>
-            <li>хоккей</li>
-            <li>флорбол</li>
-             <li>хоккей</li>
-            <li>флорбол</li>
-            <li>танцы</li>
-            <li>танцы</li>
+           
          </ul>
+         <div style="clear: both;"></div>
       </div>
       <div style="background: url(img/ball3.png);
                   background-repeat: repeat-y;
@@ -57,7 +53,6 @@
             В футболе побеждает та команда, которая забьет больше голов к концу игры. Стандартная продолжительность игры составляет 90 минут с коротким перерывом, известным как «перерыв», на отметке 45 минут. Однако юношеские футбольные матчи часто короче – обычно они длятся всего 45-60 минут.
       </div>
       <div style="clear: both;"></div>
-
    </div>
    <div style="text-align: center; padding: 15px; background: aqua; color: blue; font-size: 30px;">
       Главное не победа,а участие!
