--- a/Сlass/site/index.html
+++ b/Сlass/site/index.html
@@ -49,15 +49,84 @@
            <p class="certificate">Свидетельство Таможенного представителя Федеральной таможенной службы №1349</p>
        </div>
     </header>
+
     <section class="container">
         <h2 id="quote">Вы занимаетесь бизнесом — <br> мы занимаемся вашим грузом</h2>
         <img src="img/line.png" alt="">
     </section>
+
     <section class="container elements">
         <div class="element"><img src="img/box.png" alt="" class="img_element"><p>Поможем привезти тестовую партию товара из любого уголка мира</p></div>
         <div class="element"><img src="img/cargo-ship.png" alt="" class="img_element"><p>Импортируем груз из-за границы по всем правилам и с минимальными рисками</p></div>
         <div class="element"><img src="img/world.png" alt="" class="img_element"><p>Организуем экспорт вашей продукции и товаров по всему миру</p></div>
     </section>
 
+    <section class="container">
+        <h2 id="quote" class="quote">Roslogistic — <br> бесконечные возможности</h2>
+        <img src="img/line.png" alt="">
+    </section>
+    
+    <section class="container info">
+            <div class="info_text">
+                <p class="text">
+                    Мы предлагаем комплексные логистические решения <br>
+                    всеми видами транспорта и оптимизируем цели <br>
+                    поставок для импорта и экспорта груза
+                </p>
+                <p class="text1">
+                    Предоставляем грузоперевозки и таможенное оформление по всей России.<br>
+                    Благодаря тому, что у нас заключены договоры с судоходными морскими линиями, <br>
+                    мы осуществляем внутрипортовое экспедирование на терминалах всех морских <br>
+                    портов, в том числе Санкт-Петербурга, Новороссийска, Владивостока. 
+                </p>
+                <p class="text1">   
+                    Мы обеспечиваем таможенное оформление грузов, перевозимых автотранспортом, <br>
+                    в любом таможенном пункте Российской Федерации, независимо от региона <br>
+                    доставки.
+                </p>
+                <p class="text1"> 
+                    Это значит, что мы контролируем весь процесс перевозки груза от момента <br>
+                    подписания контракта до порожнего контейнера.
+                </p>
+            </div>
+            <img src="img/icon_possibilities/Subtract.png" alt="" id="infinity">
+            <ul class="possibilities">
+                <li><img src="img/icon_possibilities/point.png" alt=""><h5>Международная логистика</h5></li>
+                <li><img src="img/icon_possibilities/icon.png" alt=""><h5>Экспедирование</h5></li>
+                <li><img src="img/icon_possibilities/icona.png" alt=""><h5>Таможенное оформление</h5></li>
+                <li><img src="img/icon_possibilities/iconb.png" alt=""><h5>Сертификация</h5></li>
+                <li><img src="img/icon_possibilities/iconc.png" alt=""><h5>Организация доставки груза</h5></li>
+            </ul>
+    </section>
+
+    <section class="background container"></section>
+        
+    <section class="container transport">
+        <h2 id="quote">Полностью берем <br> вопрос логистики на себя</h2>
+        <img src="img/line.png" alt="">
+        <div class="t_flex">
+            <div>
+                <h4>
+                    Вам больше не придется ломать голову над всем,<br> 
+                    что связано с ввозом и вывозом грузов. 
+                </h4>
+                <p class="t_text">Мы знаем ответы на все вопросы, например:</p>
+                <ul class="Icon_transport">
+                    <li><img src="img/Icon_transport/air.png" alt=""><h5>какой способ доставки груза выбрать, чтобы перевозка не <br> вышла слишком дорогой или слишком долгой;</h5></li>
+                    <li><img src="img/Icon_transport/list.png" alt=""><h5>как правильно заполнить документы или какие нужны <br> сертификаты на вашу продукцию;</h5></li>
+                    <li><img src="img/Icon_transport/hand.png" alt=""><h5>как с минимальными рисками доставить ценный груз;</h5></li>
+                    <li><img src="img/Icon_transport/cargo.png" alt=""><h5>как отслеживать статус груза.</h5></li>
+                </ul>
+                <p class="t_text">Мы поможем вам освободить время на масштабирование бизнеса <br> и привлечение клиентов</p>
+                <div class="text_container">
+                    <hr>
+                    <p class="test_text">Привезем тестовую партию товара из любого уголка мира</p>
+                    <button id="application">Оставить заявку</button>
+                    <hr>
+                </div>
+            </div>
+            <div class="empty"></div>
+        </div>
+    </section>
 </body>
 </html>
