--- a/home/Maket_site/index.html
+++ b/home/Maket_site/index.html
@@ -7,9 +7,9 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="css/reset.css">
-   <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="CSS/reset.css">
+   <link rel="stylesheet" href="CSS/normalize.css">
+   <link rel="stylesheet" href="CSS/style.css">
 
    <title>Document</title>
 </head>
