--- a/index.html
+++ b/index.html
@@ -81,5 +81,10 @@
       <a href="home/maket_abs/index.html">abs</a><br>
       <a href="home/maket_div/index.html">fix</a><br>
 
+   <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
+
+      <a href="home/chekbox/index.html">Checkbox</a><br>
+      <a href="home/maket_flex/index.html">flex</a><br>
+
 </body>
 </html>
