--- a/home/chekbox/index.html
+++ b/home/chekbox/index.html
@@ -9,23 +9,41 @@
       input{
          width: 50px;
          height: 50px;
-         
-         
+         display: none;
       }
       label{
          display: inline-block;
-         width: 100px;
-         height: 40px;
-         border: 3px solid black;
+         width: 80px;
+         height: 25px;
          user-select: none;
-         background-color: aqua;
+         background-color: rgb(83, 68, 68);
          position: relative;
+         border-radius: 23px;
       }
       label::before{
          content: "";
-         background-color: rgb(105, 3, 134);
-         width: 30px;
+         background-color: rgb(255, 255, 255);
+         width: 20px;
          height: 20px;
+         position: absolute;
+         top: 2px;
+         left: 3px;
+         border-radius: 15px;
+         transition: 0.5s;
+      }
+      label + :checked::after{
+         content: '';
+         background-color: aqua;
+         width: 20px;
+         height: 20px;
+         position: absolute;
+      }
+      input:checked + label{
+         background-color: rgb(0, 255, 0);
+      }
+      input:checked + label::before{
+         left: 56px;
+         background: url(g.png) no-repeat;
       }
    </style>
 </head>
@@ -33,8 +51,7 @@
 
    <form action="/">
       <input type="checkbox" id="test">
-      <label for="test">test</label>
+      <label for="test"></label>
    </form>
-   
 </body>
 </html>
