--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
       <h1>Макет сайта</h1>
 
-      <a href="home/Maket_site/index.html">САЙТ</a><br>
+      <a href="home/Maket_site/index.html">maket</a><br>
       <p>Две другие страницы на ссылках "гостинные" и "акции"</p>
+      <a href="Сlass/site/index.html">maket (flex)</a><br>
 
    <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
 
