--- a/Сlass/site/index.html
+++ b/Сlass/site/index.html
@@ -128,5 +128,10 @@
             <div class="empty"></div>
         </div>
     </section>
+    
+    <section class="container">
+        <h2 id="quote">Услуги</h2>
+        <img src="img/line.png" alt="">
+    </section>
 </body>
 </html>
