--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
       <a href="home/maket_abs/index.html">abs</a><br>
       <a href="home/maket_div/index.html">fix</a><br>
 
-   <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
+   <h1>Тема 9. CSS3. Анимация. Flex</h1>
 
+      <a href="home/video/index.html">Video</a><br>
       <a href="home/chekbox/index.html">Checkbox</a><br>
       <a href="home/maket_flex/index.html">flex</a><br>
 
