--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <a href="home/Maket_site/index.html">maket</a><br>
       <p>Две другие страницы на ссылках "гостинные" и "акции"</p>
-      <a href="../Сlass/site/index.html">maket(flex)</a><br>
+      <a href="Сlass/site/index.html">maket(flex)</a><br>
 
    <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
 
