--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
       <a href="home/video/index.html">Video</a><br>
       <a href="home/chekbox/index.html">Checkbox</a><br>
       <a href="home/maket_flex/index.html">flex</a><br>
+      <a href="home/test_anim/index.html">anim</a><br>
+      <a href="home/sprites_anim/index.html">anim_sprite</a><br>
 
 </body>
 </html>
