--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <h1>3 Цвет,шрифт,границы,размер</h1>
 
       <a href="home/FONT_gvh/index.html">Fonts 1 - <span>checked</span></a><br>
-      <a href="home/FONT_gvh/index2.html">Fonts 2- <span class="repeat">ПЕРЕДЕЛАЛ(Были вопросы)</span></a><br>
+      <a href="home/FONT_gvh/index2.html">Fonts 2 - <span>checked</span></a><br>
       <a href="home/3dop/index.html">safe - <span>checked</span></a>
 
    <h1>4 Отступы,фон,таблицы</h1>
@@ -47,7 +47,7 @@
       <a href="home/1tag/index.html">1 tag - <span>checked</span></a><br>
       <a href="home/area/index.html">area - <span>checked</span></a><br>
       <a href="home/Nocut/index.html">nocut - <span>checked</span></a><br>
-      <a href="home/tefal/index.html">tefal- <span class="repeat">ПЕРЕДЕЛАЛ(Были вопросы)</span></a><br>
+      <a href="home/tefal/index.html">tefal - <span>checked</span></a><br>
       <a href="home/cards/index.html">cards - <span>checked</span></a>
 
    <h1>5 Обтекание. Вёрстка макетов. Селекторы	</h1>
@@ -72,23 +72,27 @@
 
       <h1>Макет сайта</h1>
 
-      <a href="home/Maket_site/index.html">maket</a><br>
+      <a href="home/Maket_site/index.html">maket - <span>checked</span></a><br>
       <p>Две другие страницы на ссылках "гостинные" и "акции"</p>
-      <a href="Сlass/site/index.html">maket(flex)</a><br>
+      <a href="Сlass/site/index.html">maket(flex) - <span>checked</span></a><br>
 
    <h1>8 Формы.Позиционирование.HTML 5.Мультимеда</h1>
 
-      <a href="home/maket_form/index.html">form</a><br>
-      <a href="home/maket_abs/index.html">abs</a><br>
-      <a href="home/maket_div/index.html">fix</a><br>
+      <a href="home/maket_form/index.html">form - <span>checked</span></a><br>
+      <a href="home/maket_abs/index.html">abs - <span>checked</span></a><br>
+      <a href="home/maket_div/index.html">fix - <span>checked</span></a><br>
 
    <h1>Тема 9. CSS3. Анимация. Flex</h1>
 
-      <a href="home/video/index.html">Video</a><br>
-      <a href="home/chekbox/index.html">Checkbox</a><br>
-      <a href="home/maket_flex/index.html">flex</a><br>
-      <a href="home/test_anim/index.html">anim</a><br>
-      <a href="home/sprites_anim/index.html">anim_sprite</a><br>
+      <a href="home/video/index.html">Video - <span>checked</span></a><br>
+      <a href="home/chekbox/index.html">Checkbox - <span>checked</span></a><br>
+      <a href="home/maket_flex/index.html">flex - <span>checked</span></a><br>
+      <a href="home/test_anim/index.html">anim - <span>checked</span></a><br>
+      <a href="home/sprites_anim/index.html">anim_sprite - <span>checked</span></a><br>
+
+      <h1>JS</h1>
+
+      <a href="home/Anketa/index.html">anketa</a><br>
 
 </body>
 </html>
